stopped items aligning as column on mobile

--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ body {
 }
 @media only screen and (max-width: 600px) {
     .list-item {
-        flex-direction: column;
         align-items: flex-start;
     }
 
